fixed responsive stylings, changed display from rows to cards as per feedback, update colours for readability

--- a/dev/styles/partials/_display.scss
+++ b/dev/styles/partials/_display.scss
@@ -9,29 +9,43 @@
 .avocadoList__showList{
 	padding: 30px 0 50px;
 	min-height: 40vh;
+	ul{
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 1fr 1fr 1fr;
+		grid-column-gap: 40px;
+		grid-row-gap: 40px;
+		@include respond-to("max-width: 1170px") {
+			grid-template-columns: 1fr 1fr;
+			grid-template-rows: 1fr 1fr 1fr;
+		}
+		@include respond-to("medium") {
+			grid-template-columns: 1fr;
+			grid-template-rows: 1fr 1fr 1fr;
+		}
+	}
 }
 .avocadoList__avocado{
 	border-bottom: 1px solid $avoDarkGreen;
 	background: transparentize($avoBlack,0.05);
 	color: $avoDarkGreen;
 	padding: 20px 0;
-	margin-bottom: 5px;
-	.wrapper{
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		align-items: center;
-		flex-wrap: wrap;
-		text-align: left;
-	}
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
 	h4{
-		font-size: 1.6rem;
+		font-size: 2rem;
 		text-transform: uppercase;
-		width: 20%;
+		margin-bottom: 20px;
+		// width: 20%;
 	}
 	p{
-		width: 30%;
-		font-size: 1.4rem;
+		// width: 30%;
+		font-size: 1.6rem;
+		margin-bottom: 10px;
+		font-weight: 700;
 	}
 	button{
 		padding: 10px 20px;
@@ -39,14 +53,16 @@
 		border: 2px solid $avoGreen;
 		border-radius: 250px;
 		color: $avoGreen;
-		font-size: 1.4rem;
+		font-size: 1.6rem;
+		margin-top: 20px;
 	}
 }
 .avocadoList__avocado--expired{
-	background: rgba(255,0,0,0.5);
+	background: rgba(255,0,0,0.9);
+	color: $avoBlack;
 }
 .avocado__countdown{
-	width: 30%;
+	// width: 30%;
 }
 .timer{
 	display: flex;
@@ -55,7 +71,8 @@
 	align-items: center;
 	flex-wrap: wrap;
 	p{
-		width: (100%/3);
+		// width: (100%/3);
+		padding: 0 5px;
 		font-weight: 700;
 	}
 }
