--- a/dev/styles/partials/_form.scss
+++ b/dev/styles/partials/_form.scss
@@ -37,11 +37,24 @@
   }
   ol{
   	margin-top: 20px;
+  	@include respond-to("medium") {
+  		width: calc( 100% - 20px );
+  		list-style-position: inside;
+  	}
   }
   li{
-  	font-size: 2rem;
+  	font-size: 2.4rem;
   	text-align: left;
   	color:$avoGreen;
+  	padding: 5px;
+  	@include respond-to("medium") {
+  		text-align: center;
+  	}
+  	img{
+  		height: 2.4rem;
+  		display: inline-block;
+  		padding-top: 5px;
+  	}
   }
 }
 .addAvocado__splashTitle{
