--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -15,6 +15,14 @@ header{
 	justify-content: space-between;
 	align-items: flex-end;
 	flex-wrap: wrap;
+	@include respond-to("small") {
+		height: inherit;
+		min-height: 10vh;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		padding-top: 10px;
+	}
 }
 .header__title{
 	display: flex;
@@ -22,6 +30,12 @@ header{
 	justify-content: center;
 	align-items: flex-end;
 	flex-wrap: wrap;
+	img{
+		height: 16px;
+	}
+	@include respond-to("small") {
+		width: 100%;
+	}
 }
 h1{
 	font-family: 'Baloo', cursive;
@@ -46,5 +60,8 @@ h2{
 	&:hover{
 		background: $avoDarkGreen;
 		
+	}
+	@include respond-to("small") {
+		margin-top: 10px;
 	}
 }
